# oceandata-notebooks

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  COPYME.ipynb  LICENSE  Land_tutorial.ipynb  NOTICE  README.md  container-environment.yml  environment-container.yml  environment-jupyter.yml  environment-notebooks.yml  environment-tools.yml  environment.yml  jupyter-environment.yml  notebooks-environment.yml  pyproject.toml  requirements.txt  src  template.py  tutorial_planning.txt  update-setup.py
.dvc/: config
.github/workflows/: build-container-image.yaml  build-website.yaml  conda-lock.yaml  container-image.yaml  deploy-website.yaml  lock.yaml  preview-website.yaml  repo2docker.yaml  update-website.yaml  website.yaml
binder/: appendix  apt.txt  environment.yml  start
book/: ._config.yml.bak  .gitignore  _config.yml  _toc.yml  index.md  myst.yml  setup.py  update-setup.py
book/_build/html/: index.html
book/notebooks/: L3_files_read_plot.ipynb  download_read_visualize_L2_products.ipynb  read_plot_L2_chlorophyll_map_with_xarray.ipynb
book/notebooks/hackweek/: LombScarglePeriodogram_OC.md  blue-marble.md  dask_gridding.ipynb  dask_gridding.md  earthdata_cloud_access.ipynb  earthdata_cloud_access.md  ml_cloud_mask.ipynb  ml_cloud_mask.md  modis_lombscargle_periodogram.md  oci_gpig.md  oci_lombscargle_periodogram.md  ocssw_processing.ipynb  ocssw_processing.md  rayleigh_correction.ipynb  rayleigh_correction.md  satdata_visualization.ipynb  satdata_visualization.md  satellite_insitu_matchups.ipynb  satellite_insitu_matchups.md  satellite_insitu_matchups_thomas.ipynb  satellite_insitu_matchups_thomas.md
book/notebooks/harp2/: harp2_basic_visualizations.ipynb  harp2_basic_visualizations.md  harp2_l2_aerosol_product.md  harp2_l2_cloud_gpc_product.md
book/notebooks/landsat/: landsat-aws.md
book/notebooks/modis/: modis_explore_l2.ipynb  modis_explore_l2.md  modis_explore_l3.ipynb  modis_explore_l3.md
book/notebooks/oci/: ml_cloud_mask.md  oci_cloud_products.md  oci_data_access.ipynb  oci_data_access.md  oci_data_visualization.md  oci_data_visualization_part2.md  oci_file_structure.ipynb  oci_file_structure.md  oci_grid_match.md  oci_nc_to_gtiff.ipynb  oci_no2.md  oci_ocssw_giop.md  oci_ocssw_install.ipynb  oci_ocssw_install.md  oci_ocssw_l2gen.md  oci_ocssw_processing.ipynb  oci_ocssw_processing.md  oci_ocssw_processing_overview.md  oci_project_and_format.md  oci_terrestrial_data.ipynb  oci_terrestrial_data.md  seabass_ocssw_giop.md
book/notebooks/spexone/: spexone_basic_visualizations.md  spexone_l2_aerosol_product.md
book/src/: L3_files_read_plot.py  Land_tutorial.py  download_read_visualize_L2_products.py  read_plot_L2_chlorophyll_map_with_xarray.py
book/src/hackweek/: dask_gridding.py  earthdata_cloud_access.py  ml_cloud_mask.py  ocssw_processing.py  satdata_visualization.py  satellite_insitu_matchups.py  satellite_insitu_matchups_thomas.py
book/src/harp2/: harp2_basic_visualizations.py
book/src/modis/: modis_explore_l2.py  modis_explore_l3.py
book/src/oci/: Land_tutorial.py  oci_data_access.py  oci_file_structure.py  oci_nc_to_gtiff.py  oci_no2.py  oci_ocssw_install.py  oci_ocssw_processing.py  oci_project_and_format.py  oci_terrestrial_data.py
conda/: conda-lock.yml  environment.yml
container/: .dockerignore  appendix  appendix-jupyterlab  appendix-oss  apt.txt  conda-lock.yml  environment.yml  requirements.in  requirements.txt  start
docker/: appendix  appendix-cryocloud  appendix-oss  apt.txt  environment.yml  overrides.json  requirements.in  requirements.txt  start
docs/: .gitignore  _cache.dvc  _config.yml  _toc.yml  getting-started.md  home.md  index.md  setup.md  setup.py  team.md
docs/_ext/: source_button.py
docs/_static/: custom.css
docs/_templates/: google-translate.html
docs/notebooks/: harp2_basic_visualizations.ipynb  modis_explore_l2.ipynb  modis_explore_l3.ipynb  oci_data_access.ipynb  oci_file_structure.ipynb  oci_ocssw_install.ipynb  oci_ocssw_processing.ipynb  release_note_highlights.md  spexone_data_access.ipynb  template.ipynb
docs/notebooks/hackweek/: blue-marble.md  dask_gridding.md  earthdata_cloud_access.md  modis_lombscargle_periodogram.md  oci_gpig.md  rayleigh_correction.md  satellite_insitu_matchups.md
docs/notebooks/harp2/: harp2_basic_visualizations.md  (+2 more)
docs/oci/: oci_data_access.ipynb  oci_file_structure.ipynb  oci_ocssw_processing_bash.ipynb
docs/reference/: glossary.md  how-to-cite.md
docs/sections/: cloud-atmosphere.md  data-access-basics.md  instruments.md  land.md  ocean.md  other-useful-tutorials  other-useful-tutorials.md  past-trainings.md  seadas-desktop.md  seadas-toolbox.md  visualizations.md
hackweek/: Rayleigh_correction_Kamal.ipynb
hub/: .gitignore  appendix  apt.txt  environment.yml  requirements.txt  start
repo2docker/: .gitignore  requirements.in
src/: .gitignore  1_PACE_data_access.ipynb  1_PACE_data_access.py  2_PACE_file_structure.ipynb  2_PACE_file_structure.py  4_MAP_visualizations.py  Untitled.py  _config-exec.yml  _config.yml  _toc.yml  how_to_access_oceancolor_data_on_nasa_earthdata.py  index.md  jupytext.toml  level_3_files_read_plot.py  requirements.txt  setup.py  template.py  tutorial_template.py
src/_ext/: source_button.py
src/_templates/: layout.html
src/hackweek/: earthdata_cloud_access.py  satellite_insitu_matchups.py
src/harp2/: harp2_basic_visualizations.py  harp2_data_access.py
src/learn-oci/: 2_OCI_file_structure.py
src/modis/: download_read_visualize_L2_products.py  earthaccess_oceancolor_modis_level_2.py  earthaccess_oceancolor_modis_level_3.py  how_to_access_oceancolor_data_on_nasa_earthdata.py  how_to_access_oceancolor_data_on_nasa_earthdata_2.py  modis_explore_l2.py  modis_explore_l3.py  read_plot_L2_chlorophyll_map_with_xarray.py
src/notebooks/: download_read_visualize_L2_products.py
src/oci/: OCSSW_usage.py  oci_data_access.py  oci_file_structure.py  oci_ocssw_install.py  oci_ocssw_processing.py  oci_ocssw_processing_bash.py
src/pace_l1c/: pace_l1c_aolp.py
src/spexone/: spexone_basic_visualizations.py
(+67 files in other folders)
