[project]
version = "0.2.0"
name = "oceandata-notebooks"
description = "Tutorials for data from NASA's Ocean Biology Distributed Active Archive Center (OB.DAAC)"
urls.Repository = "https://github.com/gsfc-oel/oceandata-notebooks"
license.text = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
maintainers = [
  { "name" = "Ian Carroll", "email" = "ian.t.carroll@nasa.gov" },
]

[dependency-groups]
# every package used in an import or by a backend (e.g. h5netcdf)
notebooks = [
  "cartopy>=0.23.0",
  "cf-xarray>=0.9.4",
  "cmocean>=4.0.3",
  "dask[distributed]>=2024.4.1",
  "datashader>=0.17.0",
  "earthaccess>=0.11.0",
  "h5netcdf>=1.3.0",
  "holoviews>=1.19.1",
  "hvplot>=0.9.2",
  "matplotlib>=3.8.4",
  "netcdf4>=1.6.5",
  "numba>=0.60.0",
  "pandas>=2.2.1",
  "pillow>=10.4.0",
  "pvlib>=0.11.1",
  "pyproj>=3.6.1",
  "rasterio>=1.4.1",
  "rioxarray>=0.19.0",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "torch>=2.7.0",
  "tqdm>=4.66.5",
  "xarray>=2024.3.0",
]
# additional packages for book/setup.py
kernel = [
  "bash-kernel>=0.9.3",
  "ipykernel>=6.29.3",
  "ipywidgets>=8.1.2",
]
# additional packages for docker/requirements.in
# TODO: async-timeout is a possible unlisted dep of jupyter-vscode-proxy?
docker = [
  "async-timeout>=4.0.3",
  "bash-kernel>=0.9.3",
  "black>=24.10.0",
  "boto3>=1.35.36",
  "dask-gateway>=2024.1.0",
  "dask-labextension>=7.0.0",
  "geopandas>=1.0.1",
  "geoviews>=1.12.0",
  "gh-scoped-creds>=4.1",
  "isort>=5.13.2",
  "jupyter-vscode-proxy>=0.6",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-git>=0.50.1",
  "jupyterlab-h5web>=12.3.0",
  "jupytext>=1.16.4",
  "lz4>=4.3.3",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "uv>=0.4.27",
  "zarr>=2.18.2",
]
# packages that provide command-line tools for maintainers
tools = [
  "jupyter-book<2",
  "jupytext>=1.17.1",
  "pre-commit>=4.0.1",
  "ruff>=0.7.1",
]

[tool.jupytext]
formats = { "notebooks" = "ipynb", "book/notebooks" = "md:myst" }
notebook_metadata_filter = "-all,kernelspec"
cell_metadata_filter = "all,-trusted"

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = [
  "D101",
  "D102",
  "D103", # TODO: better docstrings for all functions, methods, and classes
  "D203",
  "D213", # preference over convlicting styles D211 and D212, respectively
  "D417", # TODO: parameter descriptions for all docstrings
  "F841", # TODO: reconsider defining variables that aren't used to prevent display
]

[tool.uv]
# TODO won't need "tools" with https://github.com/astral-sh/uv/issues/13268
default-groups = ["notebooks", "kernel", "tools"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
