[project]
version = "0.2.0"
name = "oceandata-notebooks"
description = "Tutorials for data from NASA's Ocean Biology Distributed Active Archive Center (OB.DAAC)"
urls.Repository = "https://github.com/gsfc-oel/oceandata-notebooks"
license.text = "NASA-1.3"
requires-python = ">=3.11"
readme = "README.md"
maintainers = [
  { "name" = "Ian Carroll", "email" = "ian.t.carroll@nasa.gov" },
]

[dependency-groups]
# every package used in an import or by a backend (e.g. h5netcdf)
notebooks = [
  "astropy>=7.1.0",
  "cartopy>=0.23.0",
  "cf-xarray>=0.9.4",
  "cmocean>=4.0.3",
  "dask[distributed]>=2024.4.1",
  "datashader>=0.17.0",
  "earthaccess>=0.11.0",
  "h5netcdf>=1.3.0",
  "holoviews>=1.19.1",
  "hvplot>=0.9.2",
  "matplotlib>=3.8.4",
  "netcdf4>=1.6.5",
  "numba>=0.60.0",
  "pandas>=2.2.1",
  "pillow>=10.4.0",
  "pvlib>=0.11.1",
  "pyproj>=3.6.1",
  "rasterio>=1.4.1",
  "rioxarray>=0.19.0",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "torch>=2.7.0",
  "tqdm>=4.66.5",
  "xarray>=2024.3.0",
]
# additional packages for book/setup.py
kernel = [
  "bash-kernel>=0.9.3",
  "ipykernel>=6.29.3",
  "ipywidgets>=8.1.2",
]
# additional packages for docker/requirements.in
# TODO: async-timeout is a possible unlisted dep of jupyter-vscode-proxy?
docker = [
  "async-timeout>=4.0.3",
  "bash-kernel>=0.9.3",
  "black>=24.10.0",
  "boto3>=1.35.36",
  "dask-gateway>=2024.1.0",
  "dask-labextension>=7.0.0",
  "geopandas>=1.0.1",
  "geoviews>=1.12.0",
  "gh-scoped-creds>=4.1",
  "isort>=5.13.2",
  "jupyter-vscode-proxy>=0.6",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-git>=0.50.1",
  "jupyterlab-h5web>=12.3.0",
  "jupytext>=1.16.4",
  "lz4>=4.3.3",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "uv>=0.4.27",
  "zarr>=2.18.2",
]
# packages that provide command-line tools for maintainers
tools = [
  "jupyter-book<2",
  "jupytext>=1.17.1",
  "pre-commit>=4.0.1",
  "ruff>=0.7.1",
]
# uv add --group constraints -r docker/requirements.in
constraints = [
  "alembic==1.14.1",
  "annotated-types==0.7.0",
  "anyio==4.8.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "asttokens==3.0.0",
  "async_generator==1.10",
  "async-lru==2.0.4",
  "attrs==25.1.0",
  "babel==2.17.0",
  "beautifulsoup4==4.13.3",
  "bleach==6.2.0",
  "blinker==1.9.0",
  "bokeh==3.7.3",
  "Brotli==1.1.0",
  "cached-property==1.5.2",
  "certifi==2024.12.14",
  "certipy==0.2.1",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "click==8.2.1",
  "cloudpickle==3.1.1",
  "comm==0.2.2",
  "contourpy==1.3.2",
  "cryptography==44.0.0",
  "cytoolz==1.0.1",
  "dask==2025.7.0",
  "debugpy==1.8.12",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "distributed==2025.7.0",
  "exceptiongroup==1.2.2",
  "executing==2.1.0",
  "fastjsonschema==2.21.1",
  "fqdn==1.5.1",
  "fsspec==2025.7.0",
  "greenlet==3.1.1",
  "h11==0.14.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "httpcore==1.0.7",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "idna==3.10",
  "importlib_metadata==8.6.1",
  "importlib_resources==6.5.2",
  "ipykernel==6.29.5",
  "ipython==8.32.0",
  "ipywidgets==8.1.5",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "Jinja2==3.1.5",
  "json5==0.10.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "jupyter_client==8.6.3",
  "jupyter_core==5.7.2",
  "jupyter-events==0.12.0",
  "jupyter-lsp==2.2.5",
  "jupyter_offlinenotebook==0.3.1",
  "jupyter-resource-usage==1.1.0",
  "jupyter_server==2.15.0",
  "jupyter_server_terminals==0.5.3",
  "jupyterhub==5.2.1",
  "jupyterlab==4.3.5",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_server==2.27.3",
  "jupyterlab_widgets==3.0.13",
  "locket==1.0.0",
  "lz4==4.4.4",
  "Mako==1.3.9",
  "MarkupSafe==3.0.2",
  "matplotlib-inline==0.1.7",
  "mistune==3.1.1",
  "msgpack==1.1.1",
  "narwhals==1.48.0",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest_asyncio==1.6.0",
  "notebook==7.3.2",
  "notebook_shim==0.2.4",
  "numpy==2.2.6",
  "oauthlib==3.2.2",
  "overrides==7.7.0",
  "packaging==24.2",
  "pamela==1.2.0",
  "pandas==2.3.1",
  "pandocfilters==1.5.0",
  "parso==0.8.4",
  "partd==1.4.2",
  "pexpect==4.9.0",
  "pickleshare==0.7.5",
  "pillow==11.3.0",
  "pip==25.0",
  "pkgutil_resolve_name==1.3.10",
  "platformdirs==4.3.6",
  "prometheus_client==0.21.1",
  "prompt_toolkit==3.0.50",
  "psutil==5.9.8",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pyarrow==20.0.0",
  "pycparser==2.22",
  "pydantic==2.0.3",
  "pydantic_core==2.3.0",
  "Pygments==2.19.1",
  "pyinterp==2025.3.0",
  "PyJWT==2.10.1",
  "PySocks==1.7.1",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==2.0.7",
  "pytz==2025.1",
  "PyYAML==6.0.2",
  "pyzmq==26.2.1",
  "referencing==0.36.2",
  "requests==2.32.3",
  "rfc3339_validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rpds-py==0.22.3",
  "Send2Trash==1.8.3",
  "setuptools==75.8.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.5",
  "SQLAlchemy==2.0.38",
  "stack_data==0.6.3",
  "tblib==3.1.0",
  "terminado==0.18.1",
  "tinycss2==1.4.0",
  "tomli==2.2.1",
  "toolz==1.0.0",
  "tornado==6.4.2",
  "traitlets==5.14.3",
  "types-python-dateutil==2.9.0.20241206",
  "typing_extensions==4.12.2",
  "typing_utils==0.1.0",
  "tzdata==2025.2",
  "uri-template==1.3.0",
  "urllib3==2.3.0",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "wheel==0.45.1",
  "widgetsnbextension==4.0.13",
  "xarray==2025.7.1",
  "xyzservices==2025.4.0",
  "zict==3.0.0",
  "zipp==3.21.0",
  "zstandard==0.23.0",
]

[tool.jupytext]
formats = { "notebooks" = "ipynb", "book/notebooks" = "md:myst" }
notebook_metadata_filter = "-all,kernelspec"
cell_metadata_filter = "all,-trusted"

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = [
  "D101",
  "D102",
  "D103", # TODO: better docstrings for all functions, methods, and classes
  "D203",
  "D213", # preference over convlicting styles D211 and D212, respectively
  "D417", # TODO: parameter descriptions for all docstrings
  "F841", # TODO: reconsider defining variables that aren't used to prevent display
]

[tool.uv]
# TODO won't need "tools" with https://github.com/astral-sh/uv/issues/13268
default-groups = ["notebooks", "kernel", "tools"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
  # { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  # { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
