[project]
version = "0.3.0"
name = "oceandata-notebooks"
description = "Tutorials from NASA's Ocean Biology Distributed Active Archive Center (OB.DAAC)"
license.text = "NASA-1.3"
requires-python = ">=3.11"
readme = "README.md"
maintainers = [
  { "name" = "Ian Carroll", "email" = "ian.t.carroll@nasa.gov" },
]
dependencies = []

[project.optional-dependencies]
# packages imported or otherwise required by notebooks
notebooks = [
  "astropy>=7.1.0",
  "cartopy>=0.23.0",
  "cf-xarray>=0.9.4",
  "cmocean>=4.0.3",
  "dask[distributed]>=2024.4.1",
  "datashader>=0.17.0",
  "earthaccess>=0.11.0",
  "geoviews>=1.12.0",
  "gpig @ git+https://github.com/max-danenhower/pace-rrs-inversions-pigments.git",
  "h5netcdf>=1.3.0",
  "holoviews>=1.19.1",
  "hvplot>=0.9.2",
  "matplotlib>=3.8.4",
  # "numba>=0.60.0", # TODO still needed?
  "pandas>=2.2.1",
  "pillow>=10.4.0",
  "pvlib>=0.11.1",
  "pyproj>=3.6.1",
  "rasterio>=1.4.1",
  "rioxarray>=0.19.0",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "tqdm>=4.66.5",
  "xarray>=2024.3.0",
]
# additional packages for local environment
jupyter = [
  "jupyterlab>=4.4.9",
  "jupytext>=1.17.2",
  "ipywidgets>=8.1.2",
]
# additional packages for container image
# TODO: async-timeout is a possible unlisted dep of jupyter-vscode-proxy?
container = [
  "async-timeout>=4.0.3",
  "black>=24.10.0",
  "boto3>=1.35.36",
  "dask-gateway>=2024.1.0",
  "dask-labextension>=7.0.0",
  # "geopandas>=1.0.1",
  "isort>=5.13.2",
  "jupyter-vscode-proxy>=0.6",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-git>=0.50.1",
  "jupyterlab-h5web>=12.3.0",
  # "lz4>=4.3.3",
  # "scikit-image>=0.24.0",
  # "scikit-learn>=1.5.2",
  # "zarr>=2.18.2",
]
# packages that provide command-line tools for maintainers
tools = [
  "dvc[s3]>=3.63.0",
  "jupyter-book>=1.0,<2",
  "pre-commit>=4.0.1",
  "ruff>=0.7.1",
]

[tool.conda-lock]
platforms = [
  "linux-64",
  "osx-64",
  "win-64",
  "linux-aarch64",
  "osx-arm64",
]
default-non-conda-source = "pip"

[tool.jupytext]
formats = { "notebooks" = "ipynb", "docs/notebooks" = "md:myst" }
notebook_metadata_filter = "-all,kernelspec,jupytext"
cell_metadata_filter = "all,-trusted"

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = [
  "D101",
  "D102",
  "D103", # TODO: better docstrings for all functions, methods, and classes
  "D203",
  "D213", # preference over convlicting styles D211 and D212, respectively
  "D417", # TODO: parameter descriptions for all docstrings
  "F841", # TODO: reconsider defining variables that aren't used to prevent display
]

# [tool.uv]
# # TODO won't need "tools" with https://github.com/astral-sh/uv/issues/13268
# default-groups = ["notebooks", "kernel", "tools"]

# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cpu" },
#   # { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
#   # { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
# ]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
